--- a/NetsyGui/NetsyGui.csproj
+++ b/NetsyGui/NetsyGui.csproj
@@ -86,6 +86,7 @@
     <Compile Include="GenericCommandBase.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers.cs" />
+    <Compile Include="Main\MainWindowLoadFrontFeaturedListingsCommand.cs" />
     <Compile Include="Shop\ShopWindow.xaml.cs">
       <DependentUpon>ShopWindow.xaml</DependentUpon>
     </Compile>
@@ -95,7 +96,6 @@
     <Compile Include="Main\MainWindowFirstPageCommand.cs" />
     <Compile Include="Main\MainWindowNextPageCommand.cs" />
     <Compile Include="Main\MainWindowPreviousPageCommand.cs" />
-    <Compile Include="Main\MainWindowReloadCommand.cs" />
     <Compile Include="Main\MainWindowViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -110,7 +110,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ViewModelLocator.cs" />
+    <Compile Include="Locator.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
