Started shop view model

--- a/NetsyGui/NetsyGui.csproj
+++ b/NetsyGui/NetsyGui.csproj
@@ -113,6 +113,7 @@
     </Compile>
     <Compile Include="Locator.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\ShopViewModel.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
