UI project for common UI stuff between WPF and silverlight And test project for it

--- a/Netsy/Netsy.csproj
+++ b/Netsy/Netsy.csproj
@@ -45,11 +45,7 @@
     <Reference Include="System.ServiceModel.Web">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataModel\DetailLevel.cs" />
