--- a/Netsy.UI.Test/Netsy.UI.Test.csproj
+++ b/Netsy.UI.Test/Netsy.UI.Test.csproj
@@ -4,14 +4,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{417A0E95-7C18-4DB4-B901-EABD0198D167}</ProjectGuid>
+    <ProjectGuid>{C6D14338-297F-4734-B4E5-9ABA316A624E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NetsyGui.Test</RootNamespace>
-    <AssemblyName>NetsyGui.Test</AssemblyName>
+    <RootNamespace>Netsy.UI.Test</RootNamespace>
+    <AssemblyName>Netsy.UI.Test</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Netsy.UI.Test.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,37 +36,38 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="PresentationCore">
-      <RequiredTargetFramework>3.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="PresentationFramework">
-      <RequiredTargetFramework>3.0</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase">
-      <RequiredTargetFramework>3.0</RequiredTargetFramework>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\GiftGuideViewModelTest.cs" />
+    <Compile Include="ViewModels\ListingImageViewModelTest.cs" />
     <Compile Include="ViewModels\ListingViewModelTest.cs" />
     <Compile Include="ViewModels\ShopViewModelTest.cs" />
+    <Compile Include="ViewModels\UserViewModelTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Netsy\Netsy.csproj">
-      <Project>{1E1D68D7-D36C-4AB3-9476-75EB4687323B}</Project>
-      <Name>Netsy</Name>
-    </ProjectReference>
+    <None Include="Netsy.UI.Test.snk" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml">
       <Link>CodeAnalysisDictionary.xml</Link>
     </CodeAnalysisDictionary>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Netsy.UI\Netsy.UI.csproj">
+      <Project>{298E8214-4125-40E1-856E-22FDF3B59F35}</Project>
+      <Name>Netsy.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Netsy\Netsy.csproj">
+      <Project>{1E1D68D7-D36C-4AB3-9476-75EB4687323B}</Project>
+      <Name>Netsy</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
