--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -4,12 +4,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B979E9E0-EB45-47F3-8DA7-307546B8515E}</ProjectGuid>
+    <ProjectGuid>{7CE18D14-D4C5-4A24-84E4-C3F81CAAB6DE}</ProjectGuid>
     <ProjectTypeGuids>{A1591282-1198-4647-A2B1-27E5FF5F6F3B};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Netsy</RootNamespace>
-    <AssemblyName>Netsy</AssemblyName>
+    <RootNamespace>Netsy.UI</RootNamespace>
+    <AssemblyName>Netsy.UI</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <SilverlightApplication>false</SilverlightApplication>
     <ValidateXaml>true</ValidateXaml>
@@ -28,7 +28,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -51,69 +51,28 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModel\DetailLevel.cs" />
-    <Compile Include="DataModel\EtsyColor.cs" />
-    <Compile Include="DataModel\EtsyContext.cs" />
-    <Compile Include="DataModel\Feedback.cs" />
-    <Compile Include="DataModel\FeedbackDisposition.cs" />
-    <Compile Include="DataModel\Feedbacks.cs" />
-    <Compile Include="DataModel\Gender.cs" />
-    <Compile Include="DataModel\GiftGuide.cs" />
-    <Compile Include="DataModel\HsvColor.cs" />
-    <Compile Include="DataModel\Listing.cs" />
-    <Compile Include="DataModel\ListingImage.cs" />
-    <Compile Include="DataModel\Listings.cs" />
-    <Compile Include="DataModel\ListingState.cs" />
-    <Compile Include="DataModel\Method.cs" />
-    <Compile Include="DataModel\MethodTable.cs" />
-    <Compile Include="DataModel\PingResult.cs" />
-    <Compile Include="DataModel\QueryParams.cs" />
-    <Compile Include="DataModel\RgbColor.cs" />
-    <Compile Include="DataModel\ServerEpoch.cs" />
-    <Compile Include="DataModel\Shop.cs" />
-    <Compile Include="DataModel\Shops.cs" />
-    <Compile Include="DataModel\ShopSection.cs" />
-    <Compile Include="DataModel\SortField.cs" />
-    <Compile Include="DataModel\SortOrder.cs" />
-    <Compile Include="DataModel\StringResults.cs" />
-    <Compile Include="DataModel\User.cs" />
-    <Compile Include="DataModel\Users.cs" />
-    <Compile Include="DataModel\UserStatus.cs" />
+    <Compile Include="GenericCommandBase.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Helpers\DateTimeHelpers.cs" />
-    <Compile Include="Helpers\EnumHelpers.cs" />
-    <Compile Include="Helpers\GenericEventArgs.cs" />
-    <Compile Include="Helpers\GlobalSuppressions.cs" />
-    <Compile Include="Helpers\IntHelpers.cs" />
-    <Compile Include="Helpers\JsonSerializerHelper.cs" />
-    <Compile Include="Helpers\ResultEventArgs.cs" />
-    <Compile Include="Helpers\ResultStatus.cs" />
-    <Compile Include="Helpers\SilverlightNetsyException.cs" />
-    <Compile Include="Helpers\StringHelpers.cs" />
-    <Compile Include="Interfaces\IFavoritesService.cs" />
-    <Compile Include="Interfaces\IFeedbackService.cs" />
-    <Compile Include="Interfaces\IGiftService.cs" />
-    <Compile Include="Interfaces\IListingsService.cs" />
-    <Compile Include="Interfaces\IServerService.cs" />
-    <Compile Include="Interfaces\IShopService.cs" />
-    <Compile Include="Interfaces\ITagCategoryService.cs" />
-    <Compile Include="Interfaces\IUsersService.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\FavoritesService.cs" />
-    <Compile Include="Services\FeedbackService.cs" />
-    <Compile Include="Services\GiftService.cs" />
-    <Compile Include="Services\ListingsService.cs" />
-    <Compile Include="Services\ServerService.cs" />
-    <Compile Include="Services\ServiceHelper.cs" />
-    <Compile Include="Services\ShopService.cs" />
-    <Compile Include="Services\TagCategoryService.cs" />
-    <Compile Include="Services\UriBuilder.cs" />
-    <Compile Include="Services\UsersService.cs" />
+    <Compile Include="SilverlightCurrencySymbolLookup.cs" />
+    <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\GiftGuideViewModel.cs" />
+    <Compile Include="ViewModels\ListingImageViewModel.cs" />
+    <Compile Include="ViewModels\ListingViewModel.cs" />
+    <Compile Include="ViewModels\ShopViewModel.cs" />
+    <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CodeAnalysisDictionary.xml">
       <Link>CodeAnalysisDictionary.xml</Link>
     </CodeAnalysisDictionary>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Netsy\Silverlight.Netsy.csproj">
+      <Project>{B979E9E0-EB45-47F3-8DA7-307546B8515E}</Project>
+      <Name>Silverlight.Netsy</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Silverlight.Netsy.snk" />
