--- a/Netsy.UI/Netsy.UI.csproj
+++ b/Netsy.UI/Netsy.UI.csproj
@@ -63,12 +63,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueConverters\WidthToColumnCountValueConverter.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
-    <Compile Include="ViewModels\ColorKeywordsListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\ColorKeywordsListingsViewModel.cs" />
     <Compile Include="ViewModels\Constants.cs" />
     <Compile Include="ViewModels\FeedbackViewModel.cs" />
     <Compile Include="ViewModels\GiftGuideViewModel.cs" />
     <Compile Include="ViewModels\ListingImageViewModel.cs" />
-    <Compile Include="ViewModels\FrontFeaturedListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\ColorListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\KeywordsListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\FrontFeaturedListingsViewModel.cs" />
     <Compile Include="ViewModels\ListingViewModel.cs" />
     <Compile Include="ViewModels\PagedCollectionViewModel.cs" />
     <Compile Include="ViewModels\ShopViewModel.cs" />
