--- a/Netsy.UI/Netsy.UI.csproj
+++ b/Netsy.UI/Netsy.UI.csproj
@@ -71,6 +71,9 @@
     <Compile Include="ViewModels\Listings\ColorListingsViewModel.cs" />
     <Compile Include="ViewModels\Listings\KeywordsListingsViewModel.cs" />
     <Compile Include="ViewModels\Listings\FrontFeaturedListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\ListingsServiceViewModel.cs" />
+    <Compile Include="ViewModels\Listings\MaterialsListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\TagsListingsViewModel.cs" />
     <Compile Include="ViewModels\ListingViewModel.cs" />
     <Compile Include="ViewModels\PagedCollectionViewModel.cs" />
     <Compile Include="ViewModels\ShopViewModel.cs" />
