--- a/Netsy.UI.Test/Netsy.UI.Test.csproj
+++ b/Netsy.UI.Test/Netsy.UI.Test.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="HelpersTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\GiftGuideViewModelTest.cs" />
     <Compile Include="ViewModels\ListingImageViewModelTest.cs" />
