--- a/Netsy.UI/Netsy.UI.csproj
+++ b/Netsy.UI/Netsy.UI.csproj
@@ -76,6 +76,8 @@
     <Compile Include="ViewModels\Listings\TagsListingsViewModel.cs" />
     <Compile Include="ViewModels\ListingViewModel.cs" />
     <Compile Include="ViewModels\PagedCollectionViewModel.cs" />
+    <Compile Include="ViewModels\Shops\ShopsByNameViewModel.cs" />
+    <Compile Include="ViewModels\Shops\ShopsServiceViewModel.cs" />
     <Compile Include="ViewModels\ShopViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
