--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -51,17 +51,30 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="Commands\GenericCommandBase.cs" />
+    <Compile Include="Commands\SilverlightDelegateCommand.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SilverlightCurrencySymbolLookup.cs" />
+    <Compile Include="SilverlightDispatcherHelper.cs" />
     <Compile Include="ValueConverters\WidthToColumnCountValueConverter.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\Listings\ColorKeywordsListingsViewModel.cs" />
+    <Compile Include="ViewModels\Constants.cs" />
+    <Compile Include="ViewModels\FeedbackViewModel.cs" />
     <Compile Include="ViewModels\GiftGuideViewModel.cs" />
     <Compile Include="ViewModels\ListingImageViewModel.cs" />
+    <Compile Include="ViewModels\Listings\ColorListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\KeywordsListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\FrontFeaturedListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\ListingsServiceViewModel.cs" />
+    <Compile Include="ViewModels\Listings\MaterialsListingsViewModel.cs" />
+    <Compile Include="ViewModels\Listings\TagsListingsViewModel.cs" />
     <Compile Include="ViewModels\ListingViewModel.cs" />
+    <Compile Include="ViewModels\PagedCollectionViewModel.cs" />
+    <Compile Include="ViewModels\Shops\ShopsByNameViewModel.cs" />
+    <Compile Include="ViewModels\Shops\ShopsServiceViewModel.cs" />
     <Compile Include="ViewModels\ShopViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
