Silverlight version of generic command base

--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -51,8 +51,8 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\GenericCommandBase.cs" />
     <Compile Include="Commands\SilverlightDelegateCommand.cs" />
+    <Compile Include="Commands\SilverlightGenericCommandBase.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
