--- a/Netsy.WpfUI/Netsy.WpfUI.csproj
+++ b/Netsy.WpfUI/Netsy.WpfUI.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -175,6 +176,7 @@
     <Compile Include="Windows\Listing\ListingWindow.xaml.cs">
       <DependentUpon>ListingWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\Listing\ListingWindowLoadListingCommand.cs" />
     <Compile Include="Windows\Listing\ListingWindowViewModel.cs" />
     <Compile Include="Windows\Main\MainWindowViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
