--- a/Netsy.UI/Netsy.UI.csproj
+++ b/Netsy.UI/Netsy.UI.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
@@ -57,6 +58,14 @@
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="CurrencySymbolLookup.cs" />
     <Compile Include="Commands\GenericCommandBase.cs" />
+    <Compile Include="DispatchedServices\DispatchedFavoritesService.cs" />
+    <Compile Include="DispatchedServices\DispatchedFeedbackService.cs" />
+    <Compile Include="DispatchedServices\DispatchedGiftService.cs" />
+    <Compile Include="DispatchedServices\DispatchedListingsService.cs" />
+    <Compile Include="DispatchedServices\DispatchedServerService.cs" />
+    <Compile Include="DispatchedServices\DispatchedShopService.cs" />
+    <Compile Include="DispatchedServices\DispatchedTagCategoryService.cs" />
+    <Compile Include="DispatchedServices\DispatchedUsersService.cs" />
     <Compile Include="DispatcherHelper.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers.cs" />
