--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -53,11 +53,22 @@
   <ItemGroup>
     <Compile Include="Commands\SilverlightDelegateCommand.cs" />
     <Compile Include="Commands\SilverlightGenericCommandBase.cs" />
+    <Compile Include="DispatchedServices\DispatchedFavoritesService.cs" />
+    <Compile Include="DispatchedServices\DispatchedFeedbackService.cs" />
+    <Compile Include="DispatchedServices\DispatchedGiftService.cs" />
+    <Compile Include="DispatchedServices\DispatchedListingsService.cs" />
+    <Compile Include="DispatchedServices\DispatchedServerService.cs" />
+    <Compile Include="DispatchedServices\DispatchedService.cs" />
+    <Compile Include="DispatchedServices\DispatchedShopService.cs" />
+    <Compile Include="DispatchedServices\DispatchedTagCategoryService.cs" />
+    <Compile Include="DispatchedServices\DispatchedUsersService.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SilverlightCurrencySymbolLookup.cs" />
     <Compile Include="SilverlightDispatcherHelper.cs" />
+    <Compile Include="ValueConverters\ShopColumnsValueConverter.cs" />
+    <Compile Include="ValueConverters\ValueConverterHelpers.cs" />
     <Compile Include="ValueConverters\WidthToColumnCountValueConverter.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\Listings\ColorKeywordsListingsViewModel.cs" />
@@ -73,6 +84,8 @@
     <Compile Include="ViewModels\Listings\TagsListingsViewModel.cs" />
     <Compile Include="ViewModels\ListingViewModel.cs" />
     <Compile Include="ViewModels\PagedCollectionViewModel.cs" />
+    <Compile Include="ViewModels\Shops\FeaturedSellersViewModel.cs" />
+    <Compile Include="ViewModels\Shops\ShopListingsViewModel.cs" />
     <Compile Include="ViewModels\Shops\ShopsByNameViewModel.cs" />
     <Compile Include="ViewModels\Shops\ShopsServiceViewModel.cs" />
     <Compile Include="ViewModels\ShopViewModel.cs" />
