--- a/Netsy.WpfUI.Test/Netsy.WpfUI.Test.csproj
+++ b/Netsy.WpfUI.Test/Netsy.WpfUI.Test.csproj
@@ -39,8 +39,10 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindowViewModelTest.cs" />
