--- a/Netsy.UI/Netsy.UI.csproj
+++ b/Netsy.UI/Netsy.UI.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ViewModels\Listings\TagsListingsViewModel.cs" />
     <Compile Include="ViewModels\ListingViewModel.cs" />
     <Compile Include="ViewModels\PagedCollectionViewModel.cs" />
+    <Compile Include="ViewModels\Shops\FavorersOfShopViewModel.cs" />
     <Compile Include="ViewModels\Shops\FavoriteShopsOfUserViewModel.cs" />
     <Compile Include="ViewModels\Shops\FeaturedSellersViewModel.cs" />
     <Compile Include="ViewModels\Shops\ShopListingsViewModel.cs" />
