--- a/Netsy.UI/Netsy.UI.csproj
+++ b/Netsy.UI/Netsy.UI.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\DelegateCommand.cs" />
+    <Compile Include="Commands\HyperlinkNavigateCommand.cs" />
     <Compile Include="CurrencySymbolLookup.cs" />
     <Compile Include="Commands\GenericCommandBase.cs" />
     <Compile Include="DispatchedServices\DispatchedFavoritesService.cs" />
