--- a/Netsy.WpfUI/Netsy.WpfUI.csproj
+++ b/Netsy.WpfUI/Netsy.WpfUI.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Windows\Main\ShowListingWindowCommand.cs" />
     <Compile Include="Windows\Main\ShowShopWindowForListingCommand.cs" />
     <Compile Include="Windows\Main\ShowShopWindowForShopCommand.cs" />
+    <Compile Include="Windows\Main\ShowShopWindowForUserCommand.cs" />
     <Compile Include="Windows\Shop\ShopFavorers.xaml.cs">
       <DependentUpon>ShopFavorers.xaml</DependentUpon>
     </Compile>
