color picker from listings by color control.

--- a/Netsy.WpfUI/Netsy.WpfUI.csproj
+++ b/Netsy.WpfUI/Netsy.WpfUI.csproj
@@ -54,6 +54,8 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -174,6 +176,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorPicker\ColorDialog.cs" />
+    <Compile Include="ColorPicker\ColorDialogCommand.cs" />
     <Compile Include="Controls\ColorListings.xaml.cs">
       <DependentUpon>ColorListings.xaml</DependentUpon>
     </Compile>
