--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Commands\SilverlightDelegateCommand.cs" />
     <Compile Include="Commands\SilverlightGenericCommandBase.cs" />
+    <Compile Include="Commands\SilverlightHyperlinkNavigateCommand.cs" />
     <Compile Include="DispatchedServices\DispatchedFavoritesService.cs" />
     <Compile Include="DispatchedServices\DispatchedFeedbackService.cs" />
     <Compile Include="DispatchedServices\DispatchedGiftService.cs" />
@@ -67,8 +68,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SilverlightCurrencySymbolLookup.cs" />
     <Compile Include="SilverlightDispatcherHelper.cs" />
-    <Compile Include="ValueConverters\ShopColumnsValueConverter.cs" />
-    <Compile Include="ValueConverters\ValueConverterHelpers.cs" />
     <Compile Include="ValueConverters\WidthToColumnCountValueConverter.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\Listings\ColorKeywordsListingsViewModel.cs" />
