--- a/Silverlight/Netsy.Favorites/Netsy.Favorites.csproj
+++ b/Silverlight/Netsy.Favorites/Netsy.Favorites.csproj
@@ -53,6 +53,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.Unity, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libraries\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
@@ -74,7 +78,10 @@
     </Compile>
     <Compile Include="FavoritesControlViewModel.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="LoadFavoritesCommand.cs" />
+    <Compile Include="Locator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnityHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
