--- a/Silverlight/Netsy.Favorites/Netsy.Favorites.csproj
+++ b/Silverlight/Netsy.Favorites/Netsy.Favorites.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Import\UniformGrid.cs" />
     <Compile Include="Locator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShopDetailsCommand.cs" />
     <Compile Include="UnityHelper.cs" />
   </ItemGroup>
   <ItemGroup>
