--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Feedback\GetFeedbackTest.cs" />
     <Compile Include="Gifts\GetGiftGuideListingsTest.cs" />
     <Compile Include="Gifts\GetGiftGuidesTest.cs" />
-    <Compile Include="NullDataCache.cs" />
+    <Compile Include="Requests\WebRequestGeneratorTest.cs" />
     <Compile Include="Shop\GetShopDetailsByNameTest.cs" />
     <Compile Include="TestIdHelper.cs" />
     <Compile Include="TestHelpers.cs" />
