Updated some unit tests - can now do more using mock request, without resorting to integration tests

--- a/Silverlight/Netsy.Listings.Web/Netsy.Listings.Web.csproj
+++ b/Silverlight/Netsy.Listings.Web/Netsy.Listings.Web.csproj
@@ -71,6 +71,7 @@
       <Link>CodeAnalysisDictionary.xml</Link>
     </CodeAnalysisDictionary>
     <Content Include="ClientBin\Netsy.Favorites.xap" />
+    <Content Include="ClientBin\Netsy.Listings.xap" />
     <Content Include="ClientBin\Silverlight.Netsy.TestControl.xap" />
     <Content Include="ShopListings.html" />
     <Content Include="FrontListings.html" />
